--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -128,6 +128,7 @@
 		<None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\clusterrole.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\clusterrolebinding.yaml" />
+		<None Remove="Resources\Helm\neon-dashboard\templates\secret.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\.helmignore" />
 		<None Remove="Resources\Helm\neon-node-agent\Chart.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\configmap.yaml" />
