--- a/Lib/Neon.SignalR/Neon.SignalR.csproj
+++ b/Lib/Neon.SignalR/Neon.SignalR.csproj
@@ -32,7 +32,11 @@
 
   <ItemGroup>
       <FrameworkReference Include="Microsoft.AspNetCore.App" />
+      <PackageReference Include="MessagePack" Version="2.3.112" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.6" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="6.0.6" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="6.0.6" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="6.0.6" />
   </ItemGroup>
 
   <ItemGroup>
