--- a/Lib/Neon.Web/Neon.Web.csproj
+++ b/Lib/Neon.Web/Neon.Web.csproj
@@ -51,11 +51,18 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="MessagePack" Version="2.3.112" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="6.0.6" />
+        <PackageReference Include="NATS.Client" Version="0.14.8" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
-	</ItemGroup>
+        <ProjectReference Include="..\Neon.Nats\Neon.Nats.csproj" />
+    </ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
