--- a/Test/Test.Neon.Web/Test.Neon.Web.csproj
+++ b/Test/Test.Neon.Web/Test.Neon.Web.csproj
@@ -63,6 +63,9 @@
 		</PackageReference>
 		<PackageReference Include="Linq2Couchbase" Version="1.4.2" />
 		<PackageReference Include="LiquidTestReports.Markdown" Version="1.1.1-beta" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="6.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="6.0.6" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
