fix calico on Azure

--- a/Lib/Neon.Kube.Setup/Resources/Helm/calico/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/calico/values.yaml
@@ -18,6 +18,9 @@ images:
     tag: v3.22.2
 
 ipv4PoolCidr: "10.254.0.0/16"
+vEthMtu: "1440"
+ipipMode: Always
+vxlanMode: Never
 
 kubernetes:
   service:
