--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/neon-dashboard.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/neon-dashboard.yaml
@@ -57,7 +57,7 @@ spec:
             "mode": "html"
           },
           "pluginVersion": "8.5.0",
-          "title": "Panel Title",
+          "title": " ",
           "type": "text"
         },
         {
