--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/ingester/statefulset-ingester.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/ingester/statefulset-ingester.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     {{- include "loki.ingesterLabels" . | nindent 4 }}
     app.kubernetes.io/part-of: memberlist
+  {{- with .Values.loki.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.ingester.replicas }}
   podManagementPolicy: Parallel
