--- a/Lib/Neon.Cadence/Neon.Cadence.csproj
+++ b/Lib/Neon.Cadence/Neon.Cadence.csproj
@@ -76,7 +76,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" Condition="'$(TargetFrameworkVersion)'!='v4.8'" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Primitives" Version="5.0.1" Condition="'$(TargetFrameworkVersion)'=='v5.0'" />
-		<PackageReference Include="Microsoft.Extensions.Primitives" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="6.0.0" Condition="'$(TargetFrameworkVersion)'=='v5.6'"/>
 		<PackageReference Include="Microsoft.Net.Http.Server" Version="1.1.4" Condition="'$(TargetFrameworkVersion)'=='v4.8'" />
 		<PackageReference Include="System.Runtime" Version="4.3.1" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
